syntax = "proto3";

package org.dash.platform.dapi.v0;

service Core {
  rpc sendTransaction (SendTransactionRequest) returns (SendTransactionResponse);
  rpc getTransaction (GetTransactionRequest) returns (GetTransactionResponse);
  rpc getBestBlockHeight (GetBestBlockHeightRequest) returns (GetBestBlockHeightResponse);
}

message SendTransactionRequest {
  bytes raw_transaction = 1;
  bool allow_high_fees = 2;
  bool bypass_limits = 3;
}

message SendTransactionResponse {
  string transaction_id = 1;
}

message GetTransactionRequest {
  string id = 1;
}

message GetTransactionResponse {
  bytes transaction = 1;
}

message GetBestBlockHeightRequest {

}

message GetBestBlockHeightResponse {
  uint32 height = 1;
}
